remove private key wrb.config

--- a/Rouse.Net/Rouse.PatentCalculator.Web/Web.config
+++ b/Rouse.Net/Rouse.PatentCalculator.Web/Web.config
@@ -25,18 +25,13 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ida:ClientId" value="fbc23a11-e59e-4b74-a25d-802dd43ee329" />
-    <add key="ida:AADInstance" value="https://login.microsoftonline.com/" />
-    <add key="ida:ClientSecret" value="BEkaVnZ9rttTb0imkzi0lpfQKEsbVOY62cqXZ54YcyM=" />
-    <add key="ida:Domain" value="hungmailive.onmicrosoft.com" />
-    <add key="ida:TenantId" value="987bb00f-3eed-4693-9aca-cd166a31cee1" />
-    <add key="ida:PostLogoutRedirectUri" value="http://patweb20170920070622.azurewebsites.net/" />
-<!--    <add key="ida:ClientId" value="10a7d97b-117a-44fc-aafd-ccf6011c209c" />-->
-<!--    <add key="ida:AADInstance" value="https://login.microsoftonline.com/" />-->
-<!--    <add key="ida:ClientSecret" value="Yr2RNAIKSnoxoPjYh8Ilja17mK0rVBVIRV9FMn99DMA=" />-->
-<!--    <add key="ida:Domain" value="rouse.onmicrosoft.com" />-->
-<!--    <add key="ida:TenantId" value="c626a706-8a23-4027-b01e-df20bab569d7" />-->
-<!--    <add key="ida:PostLogoutRedirectUri" value="http://patentcalculator.azurewebsites.net/" />-->
+    <!--Some private key removed on here -->
+    <add key="ida:ClientId" value="" />
+    <add key="ida:AADInstance" value="" />
+    <add key="ida:ClientSecret" value="" />
+    <add key="ida:Domain" value="" />
+    <add key="ida:TenantId" value="" />
+    <add key="ida:PostLogoutRedirectUri" value="" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
